--- a/webpage/login.html
+++ b/webpage/login.html
@@ -494,7 +494,7 @@
                             
                             setTimeout(() => {
                                 // Redirect to editor with username
-                                window.location.href = `editor.html?user=${encodeURIComponent(username)}`;
+                                window.location.href = `dashboard.html?user=${encodeURIComponent(username)}`;
                             }, 1500);
                         } else {
                             // Show error from server
